<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView 
        android:id="@+id/textProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="12dp"
        android:text="@string/profileTextName" />
    
    <TextView
        android:id="@+id/textProfileJokes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textProfileName"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/profileTextJokes" />
    
    <TextView 
        android:id="@+id/textProfileReputation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textProfileJokes"
        android:layout_margin="12dp"
        android:text="@string/profileTextReputation" />
        
</RelativeLayout>