<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".JokesterActivity" >

    <LinearLayout
        android:id="@+id/layoutNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:weightSum="3" >

        <Button
            android:id="@+id/buttonProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainButtonProfile" />

        <Button
            android:id="@+id/buttonPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainButtonPost" />

        <Button
            android:id="@+id/buttonFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainButtonFavorites" />
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/flipperContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutNavigation" >

        <include layout="@layout/layout_joke" />
        <include layout="@layout/layout_post" />
        <include layout="@layout/layout_profile" />
        <include layout="@layout/layout_favorites" />
        <include layout="@layout/layout_loading" />
        
    </ViewFlipper>

</RelativeLayout>